[gd_scene load_steps=2 format=2]

[ext_resource path="res://Nodes/Projectile/Projectile.gd" type="Script" id=1]

[node name="Projectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Lifetime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="rc" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
